--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 
     <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container-fluid py-3">
-            <samp class="fw-normal text-center">Telephone Directory</samp>
+            <samp class="fw-normal text-center">Personal Information</samp>
 
         </div>
     </div>
@@ -25,30 +25,6 @@
 
                 <div class="col-md-4">
                     <div class="h-10 p-5 bg-light rounded-3" sec:authorize="hasAnyAuthority('ADMIN')">
-                        <a th:href="@{/organization}" class="nav-link text-dark  text-center">
-                            <i class="fa fa-sitemap d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
-                            Organization View
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="h-10 p-5 bg-light rounded-3" sec:authorize="hasAnyAuthority('ADMIN')">
-                        <a th:href="@{/emergency-contract}" class="nav-link text-dark  text-center">
-                            <i class="fa fa-bullhorn d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
-                            Emergency Contact
-                        </a>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-    <div class="row align-items-md-stretch">
-        <div class="container-fluid py-3">
-            <div class="row align-items-md-stretch">
-                <div class="col-md-4">
-                    <div class="h-10 p-5 bg-light rounded-3" sec:authorize="hasAnyAuthority('ADMIN')">
                         <a th:href="@{/role}" class="nav-link text-dark  text-center">
                             <i class="fa fa-bullhorn d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
                             Role Create
@@ -63,6 +39,32 @@
                         </a>
                     </div>
                 </div>
+
+              <!--  <div class="col-md-4">
+                    <div class="h-10 p-5 bg-light rounded-3" sec:authorize="hasAnyAuthority('ADMIN')">
+                        <a th:href="@{/organization}" class="nav-link text-dark  text-center">
+                            <i class="fa fa-sitemap d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
+                            Organization View
+                        </a>
+                    </div>
+                </div>-->
+         <!--       <div class="col-md-4">
+                    <div class="h-10 p-5 bg-light rounded-3" sec:authorize="hasAnyAuthority('ADMIN')">
+                        <a th:href="@{/emergency-contract}" class="nav-link text-dark  text-center">
+                            <i class="fa fa-bullhorn d-block fa-lg mx-auto mb-2" aria-hidden="true"></i>
+                            Emergency Contact
+                        </a>
+                    </div>
+                </div>-->
+
+            </div>
+        </div>
+    </div>
+
+    <div class="row align-items-md-stretch">
+        <div class="container-fluid py-3">
+            <div class="row align-items-md-stretch">
+
             </div>
         </div>
     </div>
