--- a/src/main/resources/templates/view-personal-info.html
+++ b/src/main/resources/templates/view-personal-info.html
@@ -24,13 +24,13 @@
     <th:block th:include="fragment/success-message.html"></th:block>
 
     <a th:href="@{/personal-info/add}" class="btn btn-outline-success mb-3"
-       sec:authorize="hasAnyAuthority('ADMIN','CREATOR','EDITOR','USER')">
-        <i class="fas fa-fw fa-user-plus"></i> Create New Personal Information
+       sec:authorize="hasAnyAuthority('ADMIN','REPORTED_OFFICERS')">
+        <i class="fas fa-fw fa-user-plus"></i> Create
     </a>
 
     <a th:href="@{/personal-info/view-prl}" class="btn btn-outline-success mb-3"
-       sec:authorize="hasAnyAuthority('ADMIN')">
-        <i class="fas fa-fw fa-user-plus"></i> View Only PRL Document
+       sec:authorize="hasAnyAuthority('ADMIN','REPORTED_INITIATING','COUNTER_SINGING_OFFICER')">
+        <i class="fas fa-fw fa-user-plus"></i> View List
     </a>
 
     <div class="table-responsive">
@@ -38,12 +38,12 @@
             <thead>
             <tr class="text-center">
                 <th>Govt.Id</th>
-                <th>Employee Full Name<br>Email<br>Designation<br>Department</th>
+                <th>Employee Full Name<br>Designation</th>
+                <th>Email<br>Department</th>
                 <th>Date Of Birth</th>
-                <th>Date Of Join</th>
+                <th>Period of working time:</th>
                 <th>Mobile No</th>
-                <th>PRL Applicable</th>
-                <th>PRL Date</th>
+                <th>Activities That your work last:</th>
                 <th>Creator</th>
                 <th>Created at</th>
                 <th>Actions</th>
@@ -55,12 +55,12 @@
             </tr>
             <tr class="text-center" th:each="responeDto: ${addPersonalInfo}">
                 <td th:text="${responeDto.govId}">${responeDto.govId}</td>
-                <td th:utext="${responeDto.employeeName} + ('<br>'+${(responeDto.email)}) + ('<br>'+${(responeDto.designation)}+ ('<br>'+${(responeDto.mobileNumber)}))"></td>
+                <td th:utext="${responeDto.employeeName} + ('<br>'+${(responeDto.designation)})"></td>
+                <td th:utext="${responeDto.email} + ('<br>'+${(responeDto.mobileNumber)})"></td>
                 <td th:text="${#temporals.format(responeDto.dateOfBirth, 'dd/MM/yyyy')}">dateOfBirth</td>
                 <td th:text="${#temporals.format(responeDto.dateOfJoining, 'dd/MM/yyyy')}">dateOfJoining</td>
                 <td th:text="${responeDto.mobileNumberResidence}">mobileNumberResidence</td>
-                <td th:text="${responeDto.prlApplicable}">prlApplicable</td>
-                <td th:text="${#temporals.format(responeDto.prlDate, 'dd/MM/yyyy')}">prlDate</td>
+                <td th:text="${responeDto.activitiesWork}">activitiesWork</td>
                 <td th:text="${responeDto.loggedUsers}">loggedUsers</td>
                 <td th:text="${#temporals.format(responeDto.createdAt, 'dd/MM/yyyy HH:mm:ss')}">CreatedAt</td>
                 <td>
