--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -21,7 +21,7 @@
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                     <a th:href="@{/}"
                        class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-dark text-decoration-none">
-                        <h2>Ministry Of Public Administration</h2>
+                        <h2>Exam Testing Module.</h2>
                     </a>
 
                     <div class="text-center" sec:authorize="isAuthenticated()">
